# puffer

./: .gitignore  .gitmodules  .travis-check.sh  .travis.Dockerfile  .travis.yml  Makefile.am  README.md  configure.ac  cross-std-fine-grain.xlsx  fetch-submodules.sh  fetch_submodules.py
.github/ISSUE_TEMPLATE/: bug-report.md  code-related-issue.md
models/pensieve/: nn_model_ep_77400.ckpt.index
src/: Makefile.am  puffer_machine.yml  settings_offline.yml
src/abr/: abr_algo.cc  abr_algo.hh  bola_basic.cc  bola_basic.hh  linear_bba.cc  linear_bba.hh  mpc.cc  mpc.hh  mpc_search.cc  mpc_search.hh  old_mpc.cc  old_mpc.hh  pensieve.cc  pensieve.hh  puffer.cc  puffer.hh  puffer_raw.cc  puffer_raw.hh  puffer_ttp.cc  puffer_ttp.hh  python_ipc.cc  python_ipc.hh
src/atsc/: .gitignore  Makefile.am  decoder.cc  mpeg2demo.cc
src/ccp-interface/: Cargo.toml
src/cleaner/: .gitignore  Makefile.am  cleaner.cc  crontab  depcleaner  depcleaner.cc  rawcleaner.cc  windowcleaner.cc
src/encoder/: .gitignore  Makefile.am  encoder  encoder.cc  ts_segmentation.cc
src/forwarder/: .gitignore  Makefile.am  file_message.cc  file_message.hh  file_receiver.cc  file_sender.cc  forwarder.cc  udp_to_tcp.cc
src/media-server/: .gitignore  Makefile.am  channel.cc  channel.hh  client_message.cc  client_message.h  client_message.hh  json.hpp  kernel.cc  kernel.hh  maintenance_server.cc  media_formats.cc  media_formats.hh  message.cc  message.hh  obsolete_run_servers.py  offline_test.py  package.json  portus_client.cc  portus_client.hh  run_servers.cc  run_servers.py  run_ws_server.sh  server.js  server_config.yml  server_message.cc  server_message.hh  servers_config.yml  test.cpp  test_config.yml  ws_client.cc  ws_client.hh  ws_media_server.cc  yaml.cc  yaml.hh
src/media-server/kernel_module/: .gitignore  Makefile  tcp_tv.c
src/media-server/static/: .eslintrc.js  app.js  auth.js  buffer_based.html  buffer_based.js  config.js  festive.html  festive.js  fixed_rate.html  fixed_rate.js  index.html  pensieve.html  pensieve.js  pensieve_bola.html  pensieve_bola.js  puffer.html  rate_based.html  rate_based.js  style.css  tv.html  widget.html  ws_mse.js  wsplayer.js
src/mock/: .gitignore  decoder  requirements.txt
src/monitoring/: .gitignore  Makefile.am  active_streams.conf  average_video_ssim.conf  backlog.py  client_buffer.conf  client_info.conf  client_sysinfo.conf  client_video.conf  file_reporter.cc  generate_snapshot.py  influxdb_client.cc  influxdb_client.hh  log_reporter.cc  playback_buffer.conf  rebuffer_event.conf  rebuffer_events.conf  rebuffer_rate.conf  scraper.py  server_info.conf  ssim_reporter.cc  video_acked.conf  video_quality.conf  video_sent.conf  zulip_grafana_webhook.py
src/mp4/: .gitignore  Makefile.am  box.cc  box.hh  ctts_box.cc  ctts_box.hh  elst_box.cc  elst_box.hh  ftyp_box.cc  ftyp_box.hh  mdhd_box.cc  mdhd_box.hh  mfhd_box.cc  mfhd_box.hh  mp4.cc  mp4_file.cc  mp4_file.hh  mp4_fragment.cc  mp4_info.cc  mp4_info.hh  mp4_parser.cc  mp4_parser.hh  mp4_split.cc  mp4_structure.cc  mvhd_box.cc  mvhd_box.hh  sidx_box.cc  sidx_box.hh  stco_box.cc  stco_box.hh  stsc_box.cc  stsc_box.hh  stsd_box.cc  stsd_box.hh  stss_box.cc  stss_box.hh  stsz_box.cc  stsz_box.hh  stts_box.cc  stts_box.hh  (+10 more)
src/mp4_parser/: .gitignore  Makefile.am  mp4_box.cc  mp4_box.hh  mp4_file.cc  mp4_file.hh  mp4_parser.cc  mp4_parser.hh  mp4_split.cc  mp4_structure.cc
src/mpd/: .gitignore  Makefile.am  config.cc  config.hh  mpd.cc  mpd.hh  mpd_writer  mpd_writer.cc
src/net/: .gitignore  Makefile.am  connection.cc  connection.hh  epoller_example.cc  http_message_sequence.hh  nb_secure_socket.cc  nb_secure_socket.hh  secure_socket.cc  secure_socket.hh  serialization.cc  serialization.hh  socket.cc  socket.hh  sstest.cc  ws-echo-server.cc  ws_frame.cc  ws_frame.hh  ws_message.cc  ws_message.hh  ws_message_parser.cc  ws_message_parser.hh  ws_server.cc  ws_server.hh
src/notifier/: .gitignore  Makefile.am  inotify.cc  inotify.hh  monitor.cc  notifier.cc  notifier.hh  notify_demo.cc  run_notifier.cc
src/opus-encoder/: .gitignore  Makefile.am  opus-encoder.cc
src/portal/: .gitignore  manage.py
src/reporter/: .gitignore  Makefile.am  file_reporter.cc  ssim_reporter.cc
src/scraper/: scraper.py
src/scripts/: accuracy.csv  auto_download_models.py  emu.txt  (+96 more)
src/tests/: .gitignore  Makefile.am  clean_split.py  cleaner.test  cleanup.test  depcleaner.test  fake_live.py  fetch-vectors.test  fetch_vectors.test  file_reporter.test  forwarder.test  mock_decoder.py  monitor.test  mp4.test  mpd.test  notified_bad_prog.sh  notified_good_prog.sh  notify_bad_prog.test  notify_good_prog.test  ssim.test  ssim_reporter.test  test_cleaner.py  test_forwarder.py  test_helpers.py  test_mpd.cc  test_mpd.sh  test_notifier.py  test_ssim.sh  time.test  udp_to_tcp.test  windowcleaner.test
src/tests/files/: frame1.y4m  frame2.y4m
src/util/: Makefile.am  argparser.cc  argparser.hh  child_process.cc  child_process.hh  epoller.cc  epoller.hh  file_descriptor.cc  file_descriptor.hh  filesystem.hh  formatter.cc  formatter.hh  fs_watcher.cc  fs_watcher.hh  ipc_socket.cc  ipc_socket.hh  media_formats.cc  media_formats.hh  mmap.cc  mmap.hh  mp4.cc  mp4.hh  mpd.cc  mpd.hh  path.cc  path.hh  pid.cc  pid.hh  poller.cc  poller.hh  strict_conversions.cc  strict_conversions.hh  system_runner.cc  system_runner.hh  timerfd.cc  timerfd.hh  timestamp.cc  timestamp.hh  tokenize.cc  tokenize.hh  (+4 more)
src/webm/: .gitignore  Makefile.am  webm_fragment.cc  webm_info.cc  webm_info.hh  webm_parser.cc  webm_parser.hh  webm_probe.cc
src/wrappers/: .gitignore  Makefile.am  audio-encoder.sh  audio-fragment.sh  audio_encoder.cc  audio_fragment.cc  audio_fragmenter.cc  canonicalizer.cc  canonicalizer.sh  config.yml  generate_mpd.cc  generate_mpd.py  killall.sh  media_formats.cc  pipeline_config.yml  run_all.cc  run_all_config.yml  run_pipeline.cc  runall.py  ssim-calculator.sh  ssim_calculator.cc  test_config.yml  video-encoder.sh  video-fragment.sh  video_canonicalizer.cc  video_encoder.cc  video_fragment.cc  video_fragmenter.cc  y4m.cc  y4m.hh  yaml.cc  yaml.hh
(+165 files in other folders)
