AM_CPPFLAGS = $(CXX17_FLAGS)
AM_CXXFLAGS = $(PICKY_CXXFLAGS)

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = \
	address.hh address.cc \
	child_process.hh child_process.cc \
	exception.hh \
	file_descriptor.hh file_descriptor.cc \
	optional.hh \
	path.hh path.cc \
	pipe.hh pipe.cc \
	poller.hh poller.cc \
	signalfd.hh signalfd.cc \
	socket.hh socket.cc \
	strict_conversions.hh strict_conversions.cc \
	system_runner.hh system_runner.cc \
	temp_dir.hh temp_dir.cc \
	temp_file.hh temp_file.cc \
	timeit.hh timeit.cc \
	tokenize.hh tokenize.cc \
	util.hh util.cc
